# src/auth/dto/index.ts
@@ -1,4 +1,5 @@
 export { AuthTokensResponseDto } from './auth-tokens-response.dto';
 export { LoginDto } from './login.dto';
+export { LoginResponseDto } from './login-response.dto';
 export { RefreshTokenDto } from './refresh-token.dto';
 export { RegisterDto } from './register.dto';
