# src/users/dto/index.ts
@@ -2,4 +2,6 @@ export { MetabolismDto } from './metabolism.dto';
 export { UpdateEmailDto } from './update-email.dto';
 export { UpdatePasswordDto } from './update-password.dto';
 export { UpdateProfileDto } from './update-profile.dto';
+export { UpdateUserSettingsDto } from './update-user-settings.dto';
 export { UserResponseDto } from './user-response.dto';
+export { UserSettingsDto } from './user-settings.dto';
