# src/users/mappers/map-user-to-response-dto.ts
@@ -28,5 +28,7 @@ export const mapUserToResponseDto = (user: UserEntity, metabolism: Metabolism): 
       bmr: normalizeCalories(metabolism.bmr),
       recommendedCalories: normalizeCalories(metabolism.recommendedCalories),
     },
+
+    settings: user.settings,
   };
 };
